--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,31 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  padding: 10px; 
+  height: 15em;
+  width: 15em;
+  margin-left: 25%;
+  margin-top: 10%;
+}
+.grid-item {
+  background-color: burlywood;
+  border: 3px solid rgba(0, 0, 0, 0.8);
+  padding: 10px;
+  font-size: 30px;
+  text-align: center;
+  height: 2em;
+  width: 2em;
+  color:blue;
+  font-size: 5em;
+}
+
+#gameMessage{
+  margin-left: 35%;
+  margin-top: 20%;
+  color: blue;
+}
+
